@@ -91,8 +91,9 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * Constructor JPasswordField
-   * @param text TODO
+   * Creates a <code>JPasswordField</code> object.
+   * 
+   * @param text the initial text
    */
   public JPasswordField(String text)
   {
@@ -100,8 +101,9 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * Constructor JPasswordField
-   * @param columns TODO
+   * Creates a <code>JPasswordField</code> object.
+   * 
+   * @param columns the number of columns
    */
   public JPasswordField(int columns)
   {
@@ -109,9 +111,10 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * Constructor JPasswordField
-   * @param text TODO
-   * @param columns TODO
+   * Creates a <code>JPasswordField</code> object.
+   * 
+   * @param text the initial text
+   * @param columns the number of columns
    */
   public JPasswordField(String text, int columns)
   {
@@ -119,10 +122,11 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * Constructor JPasswordField
-   * @param document TODO
-   * @param text TODO
-   * @param columns TODO
+   * Creates a <code>JPasswordField</code> object.
+   * 
+   * @param document the document to use
+   * @param text the initial text
+   * @param columns the number of columns
    */
   public JPasswordField(Document document, String text, int columns)
   {
@@ -131,17 +135,20 @@ public class JPasswordField extends JTextField
 
   /**
    * writeObject
-   * @param stream TODO
-   * @exception IOException TODO
+   * 
+   * @param stream the stream to write to
+   * 
+   * @exception IOException if an error occurs
    */
   private void writeObject(ObjectOutputStream stream) throws IOException
   {
-    // TODO
+    // TODO: Implement me.
   }
 
   /**
-   * getUIClassID
-   * @return String
+   * Returns the <code>UIClassID</code>
+   * 
+   * @return the string "PasswordFieldUI"
    */
   public String getUIClassID()
   {
@@ -150,7 +157,8 @@ public class JPasswordField extends JTextField
 
   /**
    * getEchoChar
-   * @return char
+   * 
+   * @return the echo char
    */
   public char getEchoChar()
   {
@@ -159,7 +167,8 @@ public class JPasswordField extends JTextField
 
   /**
    * setEchoChar
-   * @param echo TODO
+   * 
+   * @param echo the echo char
    */
   public void setEchoChar(char echo)
   {
@@ -168,7 +177,9 @@ public class JPasswordField extends JTextField
 
   /**
    * echoCharIsSet
-   * @return boolean
+   * 
+   * @return <code>true</code> if the echo char is set,
+   * <code>false</code> otherwise.
    */
   public boolean echoCharIsSet()
   {
@@ -176,7 +187,8 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * copy
+   * Copies the selected text into the clipboard. This operation is not
+   * allowed in a password input field.
    */
   public void copy()
   {
@@ -184,7 +196,8 @@ public class JPasswordField extends JTextField
   }
 
   /**
-   * cut
+   * Cuts the selected text and puts it into the clipboard. This operation
+   * is not allowed in a password input field.
    */
   public void cut()
   {
@@ -193,7 +206,9 @@ public class JPasswordField extends JTextField
 
   /**
    * getText
+   * 
    * @return String
+   * 
    * @deprecated
    */
   public String getText()
@@ -203,10 +218,14 @@ public class JPasswordField extends JTextField
 
   /**
    * getText
+   * 
    * @param offset TODO
    * @param length TODO
+   * 
    * @return String
+   * 
    * @exception BadLocationException TODO
+   *
    * @deprecated
    */
   public String getText(int offset, int length) throws BadLocationException
@@ -216,6 +235,7 @@ public class JPasswordField extends JTextField
 
   /**
    * getPassword
+   * 
    * @return char[]
    */
   public char[] getPassword()
@@ -225,6 +245,7 @@ public class JPasswordField extends JTextField
 
   /**
    * paramString
+   * 
    * @return String
    */
   protected String paramString()
@@ -234,7 +255,8 @@ public class JPasswordField extends JTextField
 
   /**
    * getAccessibleContext
-   * @return AccessibleContext
+   * 
+   * @return the <code>AccessibleContext</code> object
    */
   public AccessibleContext getAccessibleContext()
   {
