@@ -1,5 +1,12 @@
 2004-11-23  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/DefaultSingleSelectionModel.java,
+	javax/swing/JPasswordField.java,
+	javax/swing/tree/AbstractLayoutCache.java:
+	Reformatted and javadocs cleaned up.
+
+2004-11-23  Michael Koch  <konqueror@gmx.de>
+
 	* java/awt/Component.java:
 	Fixed argument names to match javadocs.
 	(setFont): Rewritten set property first and then fire event.
